syntax = "proto3";

package cat;

service CatService {
  rpc FindOne (CatById) returns (Cat) {}
}

message CatById {
  int32 id = 1;
}

message Cat {
  int32 id = 1;
  string name = 2;
}